A beta version for tree Genetic Programming

--- a/libeasea/Makefile
+++ b/libeasea/Makefile
@@ -8,7 +8,7 @@ endif #OS
 
 OBJS = CRandomGenerator.o CSelectionOperator.o CEvolutionaryAlgorithm.o\
 	   CStoppingCriterion.o COptionParser.o CPopulation.o CIndividual.o\
-	CGnuplot.o CCmaes.o CCuda.o CCmaesCuda.o Parameters.o
+	CGnuplot.o CCmaes.o CCuda.o CCmaesCuda.o Parameters.o CGPNode.o
 
 ifeq ($(UNAME),Darwin)
 LIBS = 
@@ -17,6 +17,7 @@ LIBS = -lboost_program_options
 endif #OS
 
 TARGET =	libeasea.a
+CPPFLAGS=-I/usr/local/cuda/include/
 
 $(TARGET): $(OBJS)
 ifeq ($(UNAME),Darwin)
@@ -28,10 +29,9 @@ endif #OS
 #	ar rcs $@ $^
 
 %.o:%.cpp
-	$(CXX)  -c $(CXXFLAGS) $^
+	$(CXX)  -c $(CXXFLAGS) $(CPPFLAGS) $^
 
 
 all:	$(TARGET)
 clean:
 	rm -f $(OBJS) $(TARGET)
-	
