--- a/libeasea/Makefile
+++ b/libeasea/Makefile
@@ -1,10 +1,6 @@
 UNAME := $(shell uname)
 
-ifeq ($(UNAME),Darwin)
 CXXFLAGS = -g -Wall -fmessage-length=0 -I../boost/
-else ifeq ($(UNAME),Linux)
-CXXFLAGS = -g -Wall -fmessage-length=0 
-endif #OS
 
 OBJS = CRandomGenerator.o CSelectionOperator.o CEvolutionaryAlgorithm.o\
 	   CStoppingCriterion.o COptionParser.o CPopulation.o CIndividual.o\
@@ -22,16 +18,10 @@ LIBS =
 #endif #OS
 
 TARGET =	libeasea.a
-CPPFLAGS=-I/usr/local/cuda/include/ -I../boost/
+CPPFLAGS=-I/usr/local/cuda/include/ -I../boost/ -pg
 
 $(TARGET): $(OBJS)
-#ifeq ($(UNAME),Darwin)
 	ar rcs $@ $^ #../boost/program_options.a 
-#else ifeq ($(UNAME),Linux)
-#	ar rcs $@ $^
-#endif #OS
-#$(TARGET): $(OBJS)
-#	ar rcs $@ $^
 
 %.o:%.cpp
 	$(CXX)  -c $(CXXFLAGS) $(CPPFLAGS) $^
