--- a/libeasea/Makefile
+++ b/libeasea/Makefile
@@ -1,31 +1,44 @@
-UNAME := $(shell uname)
+UNAME = $(shell uname)
+ifeq ($(shell uname -o 2>/dev/null),Msys)
+	OS := MINGW
+endif
 
-CXXFLAGS = -g -Wall -fmessage-length=0 -I../boost/
+CXXFLAGS = -g -Wall -fmessage-length=0 #-I../boost/
 
 OBJS = CRandomGenerator.o CSelectionOperator.o CEvolutionaryAlgorithm.o\
 	   CStoppingCriterion.o COptionParser.o CPopulation.o CIndividual.o\
 	CGnuplot.o CCmaes.o CCmaesCuda.o Parameters.o CGPNode.o\
-	CComUDPLayer.o CCuda.o
+	CComUDPLayer.o CCuda.o CStats.o
+
+ifneq ("$(OS)","")
+OBJS += inet_pton.o
+endif
 
 ifeq ($(EZ_CUDA),1)
 OBJS += CCuda.o
 endif
 
-#ifeq ($(UNAME),Darwin)
-LIBS = 
-#else ifeq ($(UNAME),Linux)
-#LIBS = -lboost_program_options 
-#endif #OS
+ifneq ("$(OS)","")
+LIBS = -L"C:\MinGW\lib" -lws2_32 -lwinmm
+endif
 
-TARGET =	libeasea.a
-CPPFLAGS=-I/usr/local/cuda/include/ -I../boost/ -pg
+TARGET = libeasea.a
+ifneq ("$(OS)","")
+	CPPFLAGS=-I..\boost\ #-pg
+else
+	CPPFLAGS=-I/usr/local/cuda/include/ -I../boost/ #-pg
+endif
 
 $(TARGET): $(OBJS)
-	ar rcs $@ $^ #../boost/program_options.a 
+	ar rcs $@ $^ 
 
 %.o:%.cpp
-	$(CXX)  -c $(CXXFLAGS) $(CPPFLAGS) $^
+	$(CXX) $(LIBS) -c $(CXXFLAGS) $(CPPFLAGS) $^ 
 
 all:	$(TARGET)
 clean:
+ifneq ("$(OS)","")
+	-del $(OBJS) $(TARGET) CCuda.o
+else
 	rm -f $(OBJS) $(TARGET)  CCuda.o
+endif
