--- a/libeasea/Makefile
+++ b/libeasea/Makefile
@@ -7,7 +7,7 @@ CXXFLAGS = -g -Wall -fmessage-length=0 #-I../boost/
 
 OBJS = CRandomGenerator.o CSelectionOperator.o CEvolutionaryAlgorithm.o\
 	   CStoppingCriterion.o COptionParser.o CPopulation.o CIndividual.o\
-	CGnuplot.o CCmaes.o CCmaesCuda.o Parameters.o CGPNode.o\
+	CGrapher.o CCmaes.o CCmaesCuda.o Parameters.o CGPNode.o\
 	CComUDPLayer.o CCuda.o CStats.o
 
 ifneq ("$(OS)","")
