Improve Grid File Server

--- a/libeasea/Makefile
+++ b/libeasea/Makefile
@@ -3,12 +3,12 @@ ifeq ($(shell uname -o 2>/dev/null),Msys)
 	OS := MINGW
 endif
 
-CXXFLAGS = -g2 -Wall -fmessage-length=0 -I/usr/local/cuda/include #-I../boost/ -lgfal
+CXXFLAGS =  -Wall -fmessage-length=0 -I/usr/include/lfc -I/usr/local/cuda/include #-I../boost/ -lgfal_pthr
 
 OBJS = CRandomGenerator.o CSelectionOperator.o CEvolutionaryAlgorithm.o\
 	   CStoppingCriterion.o COptionParser.o CPopulation.o CIndividual.o\
 	CGrapher.o CCmaes.o CCmaesCuda.o Parameters.o CGPNode.o\
-	CComUDPLayer.o CStats.o CGPNode.o
+	CComUDPLayer.o CStats.o CGPNode.o CComGridFileServer.o
 
 ifneq ("$(OS)","")
 OBJS += inet_pton.o
@@ -24,9 +24,9 @@ endif
 
 TARGET = libeasea.a
 ifneq ("$(OS)","")
-	CPPFLAGS=-g2 -I..\boost\ #-pg
+	CPPFLAGS= -I..\boost\ #-pg
 else
-	CPPFLAGS=-g2 -I../boost/ #-pg
+	CPPFLAGS= -I../boost/ #-pg
 endif
 
 $(TARGET): $(OBJS)
