--- a/libeasea/Makefile
+++ b/libeasea/Makefile
@@ -3,12 +3,12 @@ ifeq ($(shell uname -o 2>/dev/null),Msys)
 	OS := MINGW
 endif
 
-CXXFLAGS =  -Wall -fmessage-length=0 -I/usr/include/lfc -I/usr/local/cuda/include #-I../boost/ -lgfal_pthr
+CXXFLAGS =  -Wall -fmessage-length=0 -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include -I/usr/include/lfc -I/usr/local/cuda/include #-I../boost/ -lgfal_pthr
 
 OBJS = CRandomGenerator.o CSelectionOperator.o CEvolutionaryAlgorithm.o\
 	   CStoppingCriterion.o COptionParser.o CPopulation.o CIndividual.o\
 	CGrapher.o CCmaes.o CCmaesCuda.o Parameters.o CGPNode.o\
-	CComUDPLayer.o CStats.o CGPNode.o CComGridFileServer.o
+	CStats.o CGPNode.o CComWorker.o CComWorkerListmanager.o CComGridUDPServer.o
 
 ifneq ("$(OS)","")
 OBJS += inet_pton.o
