Working version new classes TODO: Documentation, log connections

--- a/libeasea/Makefile
+++ b/libeasea/Makefile
@@ -3,14 +3,14 @@ ifeq ($(shell uname -o 2>/dev/null),Msys)
 	OS := MINGW
 endif
 
-CXXFLAGS =  -O -g2 -Wall -fmessage-length=0 -I/usr/include/lfc -I/usr/include/glib-2.0 -I/usr/lib64/glib-2.0/include -I/usr/local/cuda/include #-I../boost/ -llcg_util -lgfal_pthr
+CXXFLAGS =  -O -g2 -Wall -fmessage-length=0 -I/usr/include/lfc -I/usr/include/glib-2.0 -I/usr/lib/x86_64-linux-gnu/glib-2.0/include -I/usr/local/cuda/include #-I../boost/ -llcg_util -lgfal_pthr
 
 OBJS = CRandomGenerator.o CSelectionOperator.o CEvolutionaryAlgorithm.o\
 	   CStoppingCriterion.o COptionParser.o CPopulation.o CIndividual.o\
 	CGrapher.o CCmaes.o CCmaesCuda.o Parameters.o CGPNode.o\
 	CStats.o CGPNode.o CComWorker.o CComWorkerListmanager.o CComGridUDPServer.o CComWorkerListmanager_2.o CComWorkerListmanager_3.o gfal_utils.o\
-	monitorworkerlistmanager_2.o worker_workerlistmanager.o networkcommworkercommunicator.o\
-	filecommworkercommunicator.o abstractworkerlistmanager.o
+	monitorworkerlistmanager.o worker_workerlistmanager.o networkcommworkercommunicator.o\
+	filecommworkercommunicator.o abstractworkerlistmanager.o commworkercomunitaror.o
 
 ifneq ("$(OS)","")
 OBJS += inet_pton.o
