Easea now work again on window, although slowly (pow() function on minGW 4.8.1)

--- a/libeasea/Makefile
+++ b/libeasea/Makefile
@@ -3,7 +3,7 @@ ifeq ($(shell uname -o 2>/dev/null),Msys)
 	OS := MINGW
 endif
 
-CXXFLAGS = -g -Wall -fmessage-length=0 -I/usr/local/cuda/include #-I../boost/
+CXXFLAGS = -g -O1 -Wall -fmessage-length=0 -I/usr/local/cuda/include -I../boost/
 
 OBJS = CRandomGenerator.o CSelectionOperator.o CEvolutionaryAlgorithm.o\
 	   CStoppingCriterion.o COptionParser.o CPopulation.o CIndividual.o\
@@ -23,11 +23,11 @@ LIBS = -L"C:\MinGW\lib" -lws2_32 -lwinmm
 endif
 
 TARGET = libeasea.a
-ifneq ("$(OS)","")
-	CPPFLAGS=-I..\boost\ #-pg
-else
-	CPPFLAGS=-I../boost/ #-pg
-endif
+#ifneq ("$(OS)","")
+#	CPPFLAGS=-I..\boost\ #-pg
+#else
+#	CPPFLAGS=-I../boost/ #-pg
+#endif
 
 $(TARGET): $(OBJS)
 	ar rcs $@ $^ 
@@ -37,8 +37,4 @@ $(TARGET): $(OBJS)
 
 all:	$(TARGET)
 clean:
-ifneq ("$(OS)","")
-	-del $(OBJS) $(TARGET)
-else
 	rm -f $(OBJS) $(TARGET)
-endif
