Update installation file and add a new cmake build method. Type 'cmake .', then make and the installation process stay the same ( . install.sh {local})

--- a/libeasea/Makefile
+++ b/libeasea/Makefile
@@ -11,7 +11,7 @@ OBJS = CRandomGenerator.o CSelectionOperator.o CEvolutionaryAlgorithm.o\
 	CComUDPLayer.o CStats.o CGPNode.o
 
 ifneq ("$(OS)","")
-OBJS += inet_pton.o
+OBJS += win32/inet_pton.o
 endif
 
 #ifeq ($(EZ_CUDA),1)
