--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
 
 project(EASEA)
 SET(CMAKE_STATIC_LIBRARY_PREFIX="")
-INCLUDE_DIRECTORIES(libeasea/include alexyacc/include boost)
+INCLUDE_DIRECTORIES(libeasea/include boost)
 
 ADD_DEFINITIONS(-g -w -Wno-deprecated -Wno-write-strings -fmessage-length=0 )
 
@@ -10,12 +10,6 @@ ADD_DEFINITIONS(-g -w -Wno-deprecated -Wno-write-strings -fmessage-length=0 )
 if(WIN32)
   FILE(GLOB libeasea_src_win  "libeasea/win32/*.cpp" )
 endif(WIN32)
-
-
-#Alexyacc static library
-FILE(GLOB libalex_src alexyacc/*.cpp)
-ADD_LIBRARY( libalex STATIC ${libalex_src} )
-
 
 #Libeasea static library
 FILE(GLOB libeasea_src libeasea/*.cpp )
@@ -28,6 +22,12 @@ FILE(GLOB boost_src boost/*.cpp)
 ADD_LIBRARY( program_options STATIC ${boost_src} )
 SET_TARGET_PROPERTIES(program_options PROPERTIES OUTPUT_NAME "program_options" PREFIX "" COMPILE_FLAGS "-O2")
 
+
+find_package(BISON)
+find_package(FLEX)
+FLEX_TARGET(Lexer compiler/EaseaLex.l compiler/EaseaLex.cpp)
+BISON_TARGET(Parser compiler/EaseaParse.y compiler/EaseaParse.cpp COMPILE_FLAGS -d)
+
 #Easea compiler
 SET(easea_src 
         compiler/EaseaLex.cpp
@@ -37,8 +37,9 @@ SET(easea_src
 
 
 ADD_EXECUTABLE(easea ${easea_src})
+ADD_DEPENDENCIES(easea Lexer Parser)
 SET_TARGET_PROPERTIES(easea PROPERTIES COMPILE_FLAGS "")
-TARGET_LINK_LIBRARIES(easea libeasea libalex program_options)
+TARGET_LINK_LIBRARIES(easea libeasea program_options)
 ADD_CUSTOM_COMMAND(TARGET easea POST_BUILD 
                     COMMAND $(CMAKE_COMMAND) -E copy libeasea.a libeasea/ 
                     COMMAND $(CMAKE_COMMAND) -E copy program_options.a boost/
