parallel Xover done, need to clean a bit

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(EASEA)
 SET(CMAKE_STATIC_LIBRARY_PREFIX="")
 INCLUDE_DIRECTORIES(libeasea/include boost)
 
-ADD_DEFINITIONS(-g -w -Wno-deprecated -Wno-write-strings -fmessage-length=0 )
+ADD_DEFINITIONS(-g -Wall -fopenmp -Wno-deprecated -Wno-write-strings -fmessage-length=0 )
 
 
 if(WIN32)
@@ -14,13 +14,13 @@ endif(WIN32)
 #Libeasea static library
 FILE(GLOB libeasea_src libeasea/*.cpp )
 ADD_LIBRARY( libeasea STATIC ${libeasea_src} ${libeasea_src_win})
-SET_TARGET_PROPERTIES(libeasea PROPERTIES OUTPUT_NAME "libeasea" PREFIX "" COMPILE_FLAGS "-O3 -fopenmp")
+SET_TARGET_PROPERTIES(libeasea PROPERTIES OUTPUT_NAME "libeasea" PREFIX "" COMPILE_FLAGS " -fopenmp")
 
 
 #Boost program_options static library
 FILE(GLOB boost_src boost/*.cpp)
 ADD_LIBRARY( program_options STATIC ${boost_src} )
-SET_TARGET_PROPERTIES(program_options PROPERTIES OUTPUT_NAME "program_options" PREFIX "" COMPILE_FLAGS "-O2")
+SET_TARGET_PROPERTIES(program_options PROPERTIES OUTPUT_NAME "program_options" PREFIX "" COMPILE_FLAGS "")
 
 
 find_package(BISON)
