Add monitoring capabilities to EASEA

--- a/libeasea/Makefile
+++ b/libeasea/Makefile
@@ -5,10 +5,12 @@ endif
 
 CXXFLAGS = -g -O1 -fopenmp -Wall -fmessage-length=0 -I/usr/local/cuda/include -I../boost/
 
-OBJS = CRandomGenerator.o CSelectionOperator.o CEvolutionaryAlgorithm.o\
-	   CStoppingCriterion.o COptionParser.o CPopulation.o CIndividual.o\
-	CGrapher.o CCmaes.o CCmaesCuda.o Parameters.o CGPNode.o\
-	CComUDPLayer.o CStats.o CGPNode.o
+OBJS = 	CRandomGenerator.o CSelectionOperator.o CEvolutionaryAlgorithm.o\
+	   		CStoppingCriterion.o COptionParser.o CPopulation.o CIndividual.o\
+				CGrapher.o CCmaes.o CCmaesCuda.o Parameters.o CGPNode.o\
+				CComUDPLayer.o CStats.o CGPNode.o CMonitorModule.o\
+				CMonitorUtils.o CComUDPLayer.o ClientMonitorParameter.o
+
 
 ifneq ("$(OS)","")
 OBJS += win32/inet_pton.o
