--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -51,4 +51,37 @@ INSTALL(TARGETS program_options DESTINATION /usr/local/easea/boost )
 INSTALL(DIRECTORY tpl DESTINATION /usr/local/easea )
 INSTALL(DIRECTORY "libeasea/include" DESTINATION "/usr/local/easea/libeasea")
 INSTALL(DIRECTORY boost/boost DESTINATION /usr/local/easea/boost)
+INSTALL(DIRECTORY examples DESTINATION /usr/local/easea/examples)
 INSTALL(FILES easeagrapher/EaseaGrapher.jar DESTINATION /usr/local/easea/easeagrapher )
+
+SET(MAJOR_VERSION 0)
+SET(MINOR_VERSION 1)
+SET(PATCH_VERSION 0)
+ 
+IF(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
+INCLUDE(InstallRequiredSystemLibraries)
+ 
+SET(CPACK_SET_DESTDIR "on")
+SET(CPACK_PACKAGING_INSTALL_PREFIX "/tmp")
+SET(CPACK_GENERATOR "DEB")
+ 
+SET(CPACK_PACKAGE_DESCRIPTION "EASEA framework")
+SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "EASEA: A distributed and massively parallel evolutionary engine")
+SET(CPACK_PACKAGE_VENDOR "University of Strasbourg")
+SET(CPACK_PACKAGE_CONTACT "Pallamidessi Joseph")
+SET(CPACK_PACKAGE_VERSION_MAJOR "${MAJOR_VERSION}")
+SET(CPACK_PACKAGE_VERSION_MINOR "${MINOR_VERSION}")
+SET(CPACK_PACKAGE_VERSION_PATCH "${PATCH_VERSION}")
+SET(CPACK_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}.${CPACK_PACKAGE_VERSION_PATCH}")
+SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${MAJOR_VERSION}.${MINOR_VERSION}.${CPACK_PACKAGE_VERSION_PATCH}")
+ 
+SET(CPACK_DEBIAN_PACKAGE_DEPENDS "libc6 (>= 2.1.3), libgcc1 (>= 1:4.1.1), libstdc++6 (>= 4.2.1), build-essential")
+ 
+SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
+SET(CPACK_DEBIAN_PACKAGE_SECTION "devel")
+SET(CPACK_DEBIAN_ARCHITECTURE ${CMAKE_SYSTEM_PROCESSOR})
+ 
+SET(CPACK_COMPONENTS_ALL Libraries ApplicationData)
+INCLUDE(CPack)
+ 
+ENDIF(EXISTS "${CMAKE_ROOT}/Modules/CPack.cmake")
