--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,21 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
-PROJECT(EASENA)
+PROJECT(EASENA)#_DEBUG VERSION "2.15.0")
+set(PROJECT_NAME "EASENA")
+set(PROJECT_VER  "PRE")
+set(PROJECT_VER_MAJOR 2)
+set(PROJECT_VER_MINOR 15)
+set(PROJECT_VER_PATCH 0)
+CONFIGURE_FILE(config.h.in libeasea/include/config.h)
+INCLUDE_DIRECTORIES(${CMAKE_CURRENT_DIR})
+
+message("-- PROJECT NAME: ${PROJECT_NAME}")
+message("-- PROJECT VERSION: ${PROJECT_VER}")
+message("-- PROJECT VERSION MAJOR: ${PROJECT_VER_MAJOR}")
+message("-- PROJECT VERSION MINOR: ${PROJECT_VER_MINOR}")
 
 SET(CMAKE_STATIC_LIBRARY_PREFIX="")
-
+INCLUDE_DIRECTORIES(${PROJECT_BINARY_BIN})
 INCLUDE_DIRECTORIES(libeasea/include cxxopts)
 INCLUDE_DIRECTORIES(libeasna/include)
 
