--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.0)
 
-PROJECT(EASENA)#_DEBUG VERSION "2.15.0")
+PROJECT(EASENA)#_DEBUG VERSION "2.16.0")
 set(PROJECT_NAME "EASENA")
-set(PROJECT_VER  "PRE")
+set(PROJECT_VER  "RE")
 set(PROJECT_VER_MAJOR 2)
-set(PROJECT_VER_MINOR 15)
+set(PROJECT_VER_MINOR 16)
 set(PROJECT_VER_PATCH 0)
 #CONFIGURE_FILE(config.h.in libeasea/include/config.h)
 #INCLUDE_DIRECTORIES(${CMAKE_CURRENT_DIR})
