--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,3 +34,6 @@ jobs:
       # Execute tests defined by the CMake configuration.  
       # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
       run: sudo cmake --install ${{github.workspace}}/build
+
+    - name: Build examples
+      run: EZ_PATH=/usr/local/easena/ sh ${{github.workspace}}/examples/build-all.sh "/usr/local/easena/bin/easena"
